# inviwo-marketplace

./: .gitmodules  CMakePresets.json  vcpkg.json
.github/workflows/: build_installer.yml  build_module.yml  inviwo.yml
cmake/: vcpkghelpers.cmake
ext/: CMakeLists.txt
include/inviwo/core/common/: modulemanager.h
include/inviwo/core/util/: formats.h
modules/assimp/: CMakeLists.txt
modules/marketplace/: CMakeLists.txt  depends.cmake  readme.md
modules/marketplace/include/inviwo/marketplace/: downloadmanager.h  marketbinmodulewidgetqt.h  marketmanager.h  marketmodulewidgetqt.h  marketplacemodule.h  marketplacemoduledefine.h  marketplacesettings.h  marketplacewidgetqt.h  marketsrcmodulewidgetqt.h
modules/marketplace/include/inviwo/marketplace/processors/: marketplace.h
modules/marketplace/src/: downloadmanager.cpp  marketbinmodulewidgetqt.cpp  marketmanager.cpp  marketmodulewidgetqt.cpp  marketplacemodule.cpp  marketplacesettings.cpp  marketplacewidgetqt.cpp  marketsrcmodulewidgetqt.cpp
modules/marketplace/src/processors/: marketplace.cpp
modules/markettest/: CMakeLists.txt  readme.md
modules/markettest/include/inviwo/markettest/: markettestmodule.h  markettestmoduledefine.h
modules/markettest/src/: markettestmodule.cpp
modules/markettestmodule/: CMakeLists.txt  readme.md
modules/markettestmodule/include/inviwo/markettestmodule/: markettestmodulemodule.h  markettestmodulemoduledefine.h
modules/markettestmodule/include/inviwo/markettestmodule/processors/: testprocessor.h
modules/markettestmodule/src/: markettestmodulemodule.cpp
modules/markettestmodule/src/processors/: testprocessor.cpp
modules/qtwidgets/include/modules/qtwidgets/processors/: processorwidgetqt.h
modules/qtwidgets/src/processors/: processorwidgetqt.cpp
src/core/common/: inviwomodule.cpp  modulemanager.cpp
src/core/resourcemanager/: resourcemanagerobserver.cpp
src/core/tests/benchmarks/: safecstr.cpp
src/core/util/: formats.cpp
